--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
       </div>
       <div class="craft section w-full flex gap-10 justify-between px-10">
         <div class="ltext w-[40%] py-10">
-          <p class="text-xl ">
+          <p class="text-3xl font-light leading-[3rem]">
             Significo is a custom health software developer founded on the belief that technology can transform healthcare to put people first. We put humanity back at the center of healthcare with technology that simplifies complexity, accelerates capacity, and improves outcomes.
           </p>
         </div>
