--- a/index.html
+++ b/index.html
@@ -14,6 +14,20 @@
 </head>
 
 <body theme="salmon">
+  <!-- navbar  -->
+  <nav class="bg-gray-800 p-4 fixed w-full top-0">
+    <div class="container mx-auto flex justify-end items-center"> <!-- Logo -->
+      <div class="text-white text-4xl font-bold mr-auto ml-10"> <a href="#">Significo</a> </div>
+      <div class="flex space-x-10 mr-10">
+        <a href="#" class="text-gray-300 hover:text-white font-bold">Solutions</a> 
+        <a href="#" class="text-gray-300 hover:text-white font-bold">About</a> 
+        <a href="#" class="text-gray-300 hover:text-white font-bold">Insights</a> 
+        <a href="#" class="text-gray-300 hover:text-white font-bold">Team</a> 
+        <a href="#" class="text-gray-300 hover:text-white font-bold">Careers</a>
+        <a href="#" class="bg-orange-500 text-black hover:bg-orange-600 font-bold py-2 px-4 rounded">Contact Us</a>
+      </div>
+  </nav>
+  <!-- navbar end  -->
   <div class="main w-full">
     <div data-color="black" class="section home w-full h-[200vh] relative">
       <div class="w-full sticky top-0 left-0">
@@ -687,7 +701,7 @@
           <span class="text-5xl"> &uarr; </span>
         </div>
         <p class="mt-4 text-sm">WELCOME TO THE NEW ERA OF CARE</p>
-      </div>      
+      </div>
     </div>
     <!-- end  -->
     <div class="footer h-screen">
@@ -719,7 +733,7 @@
           <br>
         </div>
         <div class="w-[25%]">
-          <button class="bg-orange-600 text-black pl-20 pr-20 pt-5 pb-5 font-regular text-sm">CONTACT US</button>
+          <button class="bg-orange-600 text-black pl-20 pr-20 pt-5 pb-5 font-semibold text-sm">CONTACT US</button>
           <br>
           <br>
           <h1>Austin, Texas</h1>
