--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
 
 <body theme="salmon">
   <!-- navbar  -->
-  <nav class="bg-gray-800 p-4 fixed w-full top-0">
+  <nav class="bg-gray-800 p-3 fixed w-full top-0">
     <div class="container mx-auto flex justify-end items-center"> <!-- Logo -->
-      <div class="text-white text-4xl font-bold mr-auto ml-10"> <a href="#">Significo</a> </div>
-      <div class="flex space-x-10 mr-10">
-        <a href="#" class="text-gray-300 hover:text-white font-bold">Solutions</a> 
-        <a href="#" class="text-gray-300 hover:text-white font-bold">About</a> 
-        <a href="#" class="text-gray-300 hover:text-white font-bold">Insights</a> 
-        <a href="#" class="text-gray-300 hover:text-white font-bold">Team</a> 
-        <a href="#" class="text-gray-300 hover:text-white font-bold">Careers</a>
-        <a href="#" class="bg-orange-500 text-black hover:bg-orange-600 font-bold py-2 px-4 rounded">Contact Us</a>
+      <div class="text-white text-3xl font-bold mr-auto"> <a href="#">Significo</a> </div>
+      <div class="flex space-x-6 mr-4 items-center">
+        <a href="#" class="text-gray-300 hover:text-white font-semibold">Solutions</a>
+        <a href="#" class="text-gray-300 hover:text-white font-semibold">About</a>
+        <a href="#" class="text-gray-300 hover:text-white font-semibold">Insights</a>
+        <a href="#" class="text-gray-300 hover:text-white font-semibold">Team</a>
+        <a href="#" class="text-gray-300 hover:text-white font-semibold">Careers</a>
+        <a href="#" class="bg-orange-600 text-black hover:bg-orange-700 py-2 px-4 rounded font-medium">Contact Us</a>
       </div>
   </nav>
   <!-- navbar end  -->
   <div class="main w-full">
     <div data-color="black" class="section home w-full h-[200vh] relative">
       <div class="w-full sticky top-0 left-0">
-        <div class="heading absolute top-[7%] left-1/3 w-96 text-center">
-          <h1 class="text-2xl font-medium">
+        <div class="heading absolute top-[7%] left-1/3 w-96 text-center mt-7">
+          <h1 class="text-2xl font-medium ">
             We Craft Healthcare technology that is more human:
           </h1>
         </div>
@@ -230,20 +230,20 @@
     </div>
     <!-- SECOND SECTION -->
     <div data-color="cyan" class="craft section w-full flex gap-10 justify-between items-start relative px-10">
-      <div class="ltext w-[50%] py-5 sticky top-0 left-0">
-        <p class="text-xl font-light leading-[2rem]">
+      <div class="ltext w-[42%] py-5 sticky top-[10%] left-0">
+        <p class="text-lg font-light leading-7">
           Significo is a custom health software developer founded on the
           belief that technology can transform healthcare to put people first.
           We put humanity back at the center of healthcare with technology
           that simplifies complexity, accelerates capacity, and improves
           outcomes.
         </p>
-        <h1 class="text-7xl leading-[5rem] mt-10 mb-10">
+        <h1 class="text-6xl leading-[4rem] mt-5 mb-10">
           Human-Centric Health Software
         </h1>
         <div class="w-fit px-8 py-3 border-[1px] border-[--dcyan]">
           <div class="masker overflow-hidden">
-            <span class="inline-block text-lg font-medium">Our Solutions</span>
+            <span class="inline-block text-lg font-medium cursor-pointer">Our Solutions</span>
           </div>
         </div>
       </div>
@@ -324,7 +324,7 @@
     <!-- THIRD SECTION -->
     <div data-color="salmon" class="real section w-full">
       <div class="contain w-full h-[400vh] relative">
-        <div class="slides overflow-hidden w-full h-[100vh] flex sticky top-0 left-0">
+        <div class="slides overflow-hidden w-full h-[100vh] flex sticky top-[10%] left-0">
           <div class="slide w-full h-screen flex-shrink-0 flex items-center justify-center relative">
             <div class="text w-fit space-y-4">
               <h1 class="text-8xl">Real Talk,</h1>
@@ -627,19 +627,18 @@
         <div class="swiper-pagination"></div>
       </div>
     </div>
-
     <div data-color="white"
       class="capsules overflow-hidden w-full h-screen  my-24 justify-between items-start flex px-12">
       <div class="left w-[250px] h-full flex flex-col justify-between py-10">
-        <h1 class="text-xl leading-8">
+        <h1 class="text-xl leading-6">
           Stay up-to-date on the latest healthcare innovations and thought
           leadership.
         </h1>
         <div class="heading">
-          <h1 class="text-6xl">Explore Our Insights</h1>
-          <div class="w-fit mt-10 px-10 py-5 border-[1px] border-[--dcyan]">
+          <h1 class="text-5xl">Explore Our Insights</h1>
+          <div class="w-fit mt-10 px-10 py-3 bg-yellow-200 border-[1px] border-[--dcyan]">
             <div class="masker overflow-hidden">
-              <span class="inline-block text-lg font-medium">View All Articles</span>
+              <span class="inline-block text-lg font-medium cursor-pointer">View All Articles</span>
             </div>
           </div>
         </div>
@@ -686,7 +685,7 @@
     <div class="bg-yellow-200  w-full yellow-footer flex items-center h-[350px] py-4  px-10">
       <div class=" w-[50%] ">
         <h1 class="text-5xl font-bold">Let's Build a better future.</h1>
-        <p class="mt-6 bg-black w-[20%] text-white py-2 px-4 text-lg hover:bg-gray-800">LET'S GO ➔</p>
+        <p class="mt-6 bg-black w-[20%] cursor-pointer text-white py-2 px-4 text-lg hover:bg-gray-800">LET'S GO ➔</p>
       </div>
       <div class="w-[35%] px-4">
         <p class="text-2xl mt-4">
@@ -705,7 +704,7 @@
     </div>
     <!-- end  -->
     <div class="footer h-screen">
-      <div class="black-footer bg-black w-full text-white flex flex-row p-10 text-xl">
+      <div class="black-footer  bg-black w-full text-white flex flex-row p-10 text-xl">
         <div class="w-[25%]">
           <h1>Solutions</h1>
           <br>
@@ -747,11 +746,6 @@
 
       </div>
     </div>
-
-    <!-- 2nd End  -->
-
-    <!-- last -->
-
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"
     integrity="sha512-7eHRwcbYkK4d9g/6tD/mhkf++eoTHwpNM9woBxtPUBWm67zeAfFC+HrdoE2GanKeocly/VxeLvIqwvCdk7qScg=="
@@ -762,7 +756,6 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/MotionPathPlugin.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
   <script src="app.js"></script>
 </body>
 
